refactor: standardize JsonNode string extraction with asString and clean up related code